[package]
name = "Quaver-Stats"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
tower-http = "0.6.2"
