[package]
name = "quaver_stats"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
image = "0.25.6"
imageproc = "0.25.0"
reqwest = { version = "0.12.15", features = ["json"] }
ab_glyph = "0.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
tower-http = "0.6.2"
