[package]
name = "quaver_stats"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
image = "0.25.8"
imageproc = "0.27.0"
reqwest = { version = "0.12.24", features = ["json"] }
ab_glyph = "0.2.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tower-http = "0.7.0"
dirs = "6.0.0"
sha1 = "0.11.0"
